5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1575_1330.log
== TEST (2019-03-12 11:47:46) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:47:48) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.115866
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:47:56) 
-- CODE:
print(41,66)
-- EXECUTION TIME:
0.138943
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:48:11) 
-- CODE:
round(41,66)
-- EXECUTION TIME:
0.130739
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:48:17) 
-- CODE:
round(41, 66)
-- EXECUTION TIME:
0.158267
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:48:52) 
-- CODE:
print('round(41,66)')
-- EXECUTION TIME:
0.113168
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41,66)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:08) 
-- CODE:
print("round(41,66)")
-- EXECUTION TIME:
0.119561
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41,66)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:23) 
-- CODE:
print("round(41.66)")
-- EXECUTION TIME:
0.198157
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41.66)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:40) 
-- CODE:
print("round(41.66667)")
-- EXECUTION TIME:
0.17695
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41.66667)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:49:40) 
-- CODE:
print("round(41.66667)")
-- EXECUTION TIME:
0.208804
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41.66667)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:15) 
-- CODE:
print(250/ 6)	

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:28) 
-- CODE:
print(round(250/ 6)	

-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:50:49) 
-- CODE:
print(round(250/ 6,)	

-- EXECUTION TIME:
0.196315
-- ERROR:
  File "/home/codebench/codes/1575/1330/main.py", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:50) 
-- CODE:
print(round(250/ 6,)	

-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:58) 
-- CODE:
print(round(250/ 6,))	

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:51:00) 
-- CODE:
print(round(250/ 6,))	

-- EXECUTION TIME:
0.124155
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:51:08) 
-- CODE:
print(round(250/ 6))	

-- EXECUTION TIME:
0.143296
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:08) 
-- CODE:
print(round(250/ 6))	

-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:51:10) 
-- CODE:
print(round(250/ 6))	

-- EXECUTION TIME:
0.14559
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:51:34) 
-- CODE:
print(round(250/ 6, 2))	

-- EXECUTION TIME:
0.293832
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
